# pymediasoup

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
examples/: README.md  mediasoup.py
pymediasoup/: __init__.py  __version__.py  consumer.py  data_consumer.py  data_producer.py  device.py  emitter.py  errors.py  ortc.py  producer.py  rtp_parameters.py  scalability_modes.py  sctp_parameters.py  transport.py
pymediasoup/handlers/: aiortc_handler.py  handler_interface.py
pymediasoup/handlers/sdp/: common_utils.py  media_section.py  model.py  remote_sdp.py  sdp_transform.py  unified_plan_utils.py
pymediasoup/models/: consumer.py  data_producer.py  handler_interface.py  producer.py  rtp_parameters.py  sctp_parameters.py  transport.py
tests/: __init__.py  fake_handler.py  fake_parameters.py
