[project]
name = "pymediasoup"
version = "1.4.0"
description = "mediasoup python client"
authors = [{ name = "Jiang Yue", email = "maze1024@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "aiortc>=1.14.0,<2",
    "h264-profile-level-id>=1.0.0,<2",
    "sdp-transform>=1.1.0,<2",
    "pyee>=13,<14",
]

[project.urls]
Repository = "https://github.com/skymaze/pymediasoup"

[dependency-groups]
dev = [
    "flake8>=7.0.0,<8",
    "black>=24.4.2,<25",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
